Temporary upload to save my work while I rebase off of tony's most recent change.

--- a/app/src/main/res/layout/fragment_tab2_rate_movies.xml
+++ b/app/src/main/res/layout/fragment_tab2_rate_movies.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     tools:context="glassa.tacoma.uw.edu.moviesproject.Tab2RateMovies">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/tab2_string" />
-
 
 </FrameLayout>
