Temporary upload to save my work while I rebase off of tony's most recent change.

--- a/app/src/main/res/layout/fragment_tab2_rate_movies.xml
+++ b/app/src/main/res/layout/fragment_tab2_rate_movies.xml
@@ -1,92 +1,13 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="glassa.tacoma.uw.edu.moviesproject.Tab1Home">
+    tools:context="glassa.tacoma.uw.edu.moviesproject.Tab2RateMovies">
 
-    <!-- TODO: Update blank fragment layout -->
-    <!--<TextView-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:text="@string/tab1_string" />-->
-
-    <!--<ListView-->
-    <!--android:id="@id/homeFeed"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content">-->
-
-
-    <!--</ListView>-->
-    <FrameLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="460dp">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Alex rated The Matrix"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Alex rated The Truman Show"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Alex rated A Bug's Life"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Alex rated The Avengers"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tony rated The Matrix"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tony rated The Truman Show"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tony rated A Bug's Life"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tony rated The Avengers"
-                />
-        </LinearLayout>
-
-    </FrameLayout>
+        android:layout_height="match_parent"
+        android:text="@string/tab2_string" />
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Followers"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Following"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ratings"/>
-
-    </LinearLayout>
-
-
-</LinearLayout>
+</FrameLayout>
