--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -63,7 +63,8 @@
         android:id="@+id/buttonReg"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="addUser"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -74,6 +75,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="14dp"
-        android:layout_marginEnd="14dp" />
+        android:layout_marginEnd="14dp"
+        android:onClick="cancelRegister"/>
 
 </RelativeLayout>
