Fixed register class

--- a/app/src/main/res/layout/fragment_tab2_rate_movies.xml
+++ b/app/src/main/res/layout/fragment_tab2_rate_movies.xml
@@ -7,7 +7,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/tab2_string" />
+        android:text="@string/tab2_string"
+        />
 
 
 </FrameLayout>
