--- a/app/src/main/res/layout/fragment_tab1_home.xml
+++ b/app/src/main/res/layout/fragment_tab1_home.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/hometabhost"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -294,21 +295,27 @@
         android:layout_height="wrap_content">
 
         <Button
+            android:id="@+id/followers_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Followers"
-            android:gravity="bottom" />
+            android:gravity="bottom"
+            android:onClick="viewFollowingUsers"/>
         <Button
+            android:id="@+id/following_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Following"
-            android:gravity="bottom"/>
+            android:gravity="bottom"
+            android:onClick="viewUsersImFollowing"/>
 
         <Button
+            android:id="@+id/ratings_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ratings"
-            android:gravity="bottom"/>
+            android:gravity="bottom"
+            android:onClick="viewRatedMovies"/>
 
     </LinearLayout>
 
