--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -1,17 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:id="@+id/activity_movie"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="glassa.tacoma.uw.edu.moviesproject.profile.ProfileActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="glassa.tacoma.uw.edu.moviesproject.movie.MovieActivity">
 
     <TextView
-        android:id="@+id/target_user_id"
+        android:id="@+id/movie_page_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="[Username]'s Profile!"
+        android:text="Movie Title"
         android:textSize="30sp" />
-
 
     <LinearLayout
         android:orientation="horizontal"
@@ -19,38 +24,27 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/followers_button"
+            android:id="@+id/like_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Followers"
+            android:text="Like"
             android:gravity="bottom"
-            android:onClick="viewFollowingUsers"/>
+            android:onClick="rateLike"/>
         <Button
-            android:id="@+id/following_button"
+            android:id="@+id/no_see_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Following"
+            android:text="Haven't Seen"
             android:gravity="bottom"
-            android:onClick="viewUsersImFollowing"/>
-
-        <Button
-            android:id="@+id/ratings_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ratings"
-            android:gravity="bottom"
-            android:onClick="viewRatedMovies"/>
+            android:onClick="rateNoSee"/>
 
         <Button
-            android:id="@+id/follow_button"
+            android:id="@+id/dislike_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Follow"
+            android:text="Dislike"
             android:gravity="bottom"
-            android:onClick="followUser"/>
-
-
+            android:onClick="rateDislike"/>
     </LinearLayout>
-
 
 </LinearLayout>
