--- a/app/src/main/res/layout/fragment_tab1_home.xml
+++ b/app/src/main/res/layout/fragment_tab1_home.xml
@@ -7,7 +7,7 @@
     tools:context="glassa.tacoma.uw.edu.moviesproject.Tab1Home">
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="930px">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
