updated Login layout. was incompatible with many other emulator sizes.

--- a/app/src/main/res/layout/fragment_tab3_find_movies.xml
+++ b/app/src/main/res/layout/fragment_tab3_find_movies.xml
@@ -5,9 +5,10 @@
     tools:context="glassa.tacoma.uw.edu.moviesproject.Tab3FindMovies">
 
 
-    <TextView
+    <SearchView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/tab3_string" />
+        android:layout_height="wrap_content"
+        android:queryHint="Enter Movie Title"
+        android:gravity="top"/>
 
 </FrameLayout>
