--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -37,8 +37,8 @@
         android:layout_below="@+id/editRegisterText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
+        android:layout_alignRight="@+id/login_edit_text"
+        android:layout_alignEnd="@+id/login_edit_text"
         android:textColorHint="#ffff299f"
         android:hint="Password" />
 
@@ -51,8 +51,8 @@
         android:layout_below="@+id/editRegisterText2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
+        android:layout_alignRight="@+id/login_edit_text"
+        android:layout_alignEnd="@+id/login_edit_text"
         android:textColorHint="#ffff299f"
         android:hint="Confirm Password" />
 
