--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,5 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -7,65 +8,44 @@
 
     <TextView android:text="Register New User" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textview"
-        android:textSize="35dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/login_title_text_view"
+        android:textSize="35dp" />
 
 
     <EditText
+        android:id="@+id/register_user_edit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editRegisterText"
         android:hint="Enter Name"
         android:focusable="true"
         android:textColorHighlight="#ff7eff15"
         android:textColorHint="#ffff25e6"
-        android:layout_marginTop="46dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_marginTop="46dp" />
 
 
     <EditText
+        android:id="@+id/register_password1_edit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/editRegisterText2"
-        android:layout_below="@+id/editRegisterText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/login_edit_text"
-        android:layout_alignEnd="@+id/login_edit_text"
         android:textColorHint="#ffff299f"
         android:hint="Password" />
 
     <EditText
+        android:id="@+id/register_password2_edit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/editRegisterText3"
-        android:layout_below="@+id/editRegisterText2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/login_edit_text"
-        android:layout_alignEnd="@+id/login_edit_text"
         android:textColorHint="#ffff299f"
         android:hint="Confirm Password" />
 
     <Button
+        android:id="@+id/register_button_final"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register"
-        android:id="@+id/buttonReg"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:onClick="addUser"/>
 
 
 
-</RelativeLayout>
+</LinearLayout>
