--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -33,7 +33,7 @@
         android:hint="Password"
         android:gravity="center"/>
 
-        <TextView
+    <!--    <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Attempts Left:"
@@ -46,7 +46,7 @@
             android:text="5"
             android:id="@+id/attempts_text_view_2"
             android:textSize="25dp" />
-
+-->
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
