--- a/app/src/main/res/layout/fragment_tab5_settings.xml
+++ b/app/src/main/res/layout/fragment_tab5_settings.xml
@@ -16,5 +16,16 @@
         android:layout_height="wrap_content"
         android:text="Logout"
         />
-
+    <Button
+        android:id="@+id/change_user_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change User Name"
+        />
+    <Button
+        android:id="@+id/change_pass_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change Password"
+        />
 </LinearLayout>
