--- a/app/src/main/res/layout/fragment_tab1_home.xml
+++ b/app/src/main/res/layout/fragment_tab1_home.xml
@@ -99,6 +99,20 @@
             android:gravity="bottom"
             android:onClick="viewRatedMovies"/>
 
+        <Button
+            android:id="@+id/logout_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Logout" />
+
+        <!--<Button-->
+            <!--android:text="Logout"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/logout_button"-->
+            <!--android:layout_weight="1"-->
+            <!--android:onClick="logout"/>-->
+
     </LinearLayout>
 
 
