--- a/app/src/main/res/layout/fragment_tab2_rate_movies.xml
+++ b/app/src/main/res/layout/fragment_tab2_rate_movies.xml
@@ -4,11 +4,55 @@
     android:layout_height="match_parent"
     tools:context="glassa.tacoma.uw.edu.moviesproject.Tab2RateMovies">
 
-    <TextView
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
+        android:id="@+id/activity_movie"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/tab2_string"
-        />
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="glassa.tacoma.uw.edu.moviesproject.movie.MovieActivity">
+
+        <TextView
+            android:id="@+id/movie_page_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Movie Title"
+            android:textSize="30sp" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/like_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Like"
+                android:gravity="bottom"
+                android:onClick="rateLike"/>
+            <Button
+                android:id="@+id/no_see_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Haven't Seen"
+                android:gravity="bottom"
+                android:onClick="rateNoSee"/>
+
+            <Button
+                android:id="@+id/dislike_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dislike"
+                android:gravity="bottom"
+                android:onClick="rateDislike"/>
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 </FrameLayout>
