Added the User feed feature to the home page. Added Icons to the tabs.  Cleaned up layouts.  Implemented Percent match system (shows on user profiles)

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/profile_activity_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,7 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="[Username]'s Profile!"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:paddingBottom="30px"/>
+
+
+    <TextView
+        android:id="@+id/match_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="xx% match"
+        android:textSize="20sp" />
+
+
 
 
     <LinearLayout
@@ -33,6 +45,11 @@
             android:gravity="bottom"
             android:onClick="viewUsersImFollowing"/>
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <Button
             android:id="@+id/ratings_button"
             android:layout_width="wrap_content"
@@ -48,8 +65,6 @@
             android:text="Follow"
             android:gravity="bottom"
             android:onClick="followUser"/>
-
-
     </LinearLayout>
 
 
