--- a/app/src/main/res/layout/activity_search_movie.xml
+++ b/app/src/main/res/layout/activity_search_movie.xml
@@ -18,13 +18,16 @@
 
 
         <EditText
-            android:layout_width="262dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:id="@+id/search_movie_bar"
-            android:hint="Search a user..." />
+            android:hint="Find a movie..."
+            />
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight=".5"
             android:id="@+id/search_movie_button"
             android:text="Search" />
     </LinearLayout>
