--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -46,6 +46,12 @@
         android:text="Register"
         android:onClick="addUser"/>
 
+    <Button
+        android:id="@+id/register_button_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        />
 
 
 </LinearLayout>
